# cement-strength-prediction

./: README.md  app.py  config.py  pyproject.toml
data/: cement_data.csv  test_data.csv
notebook/: Cement_Strength_Analysis.ipynb
src/: data_preprocessing.py  eda.py  model_prediction.py  model_training.py
