[tool.poetry]
name = "cement-strength-prediction"
version = "0.1.0"
description = "A project to predict cement strength using machine learning."
authors = ["Sarita Nandal <sarita@ma.iitr.ac.in>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.22.0"
seaborn = "^0.11.0"
matplotlib = "^3.5.0"
scikit-learn = "^1.1.0"
streamlit = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
